# wetts

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: lint.yml
docs/: index.rst
examples/BZNSYP/: run.sh
examples/BZNSYP/conf/: hifigan_v2.yaml  hifigan_v3.yaml
examples/BZNSYP/local/: parse_data.py  phn2id  special_token.txt
examples/aishell-3/: run.sh  vits
examples/aishell-3/configs/: v1.json  v3.json
examples/aishell-3/local/: download_data.sh  prepare_align_lab.py  prepare_data.py
examples/aishell3/: infer.sh  path.sh  run.sh  test_samples.txt  test_samples_speakers.txt
examples/aishell3/conf/: default.yaml  fastspeech2.yaml  hifigan_v1.yaml  hifigan_v3.yaml
examples/aishell3/local/: convert_text_to_phn.py  download_data.sh  make_data_list.py  prepare_alignment.py  prepare_data_list.py  train_val_test_split.py
examples/baker/: run.sh
examples/baker/configs/: base.json  v1.json  v2.json  v3.json  vits2_v1.json  vits2_vocos_v1.json  vocos.json
examples/baker/local/: prepare_data.py
examples/chinese_prosody_polyphone/: README.md  frontend  path.sh  run.sh  wetts
examples/chinese_prosody_polyphone/lexicon/: pinyin_dict.txt  polyphone.txt
examples/chinese_prosody_polyphone/local/: hanzi2pinyin.py  pinyin_dict.txt  polyphone.txt  polyphone_character.txt  polyphone_phone.txt  prosody.txt  prosody2id.txt  traditional2simple.txt
examples/demo/: README.md  requirements.txt  run.py
examples/ljspeech/: path.sh  run.sh
examples/ljspeech/local/: download_data.sh  prepare_data.py
examples/multilingual/: run.sh
examples/multilingual/configs/: v1.json  v3.json
examples/yuanshen/: run.sh
examples/yuanshen/configs/: base.json  demo.json  ft1.json  ft2.json  ft3.json  ft4.json
examples/yuanshen/local/: prepare_data.py
runtime/android/: README.md  settings.gradle
runtime/android/app/: build.gradle
runtime/android/app/src/main/cpp/: CMakeLists.txt  model  wetts.cc
runtime/binding/python/: CMakeLists.txt  model
runtime/binding/python/cpp/: binding.cc
runtime/core/api/: CMakeLists.txt  wetts_api.cc  wetts_api.h
runtime/core/cmake/: boost.cmake  gflags.cmake  glog.cmake  gtest.cmake  jsoncpp.cmake  onnx.cmake  onnxruntime.cmake  pybind11.cmake  wetextprocessing.cmake
runtime/core/frontend/: CMakeLists.txt  fst.cc  fst.h  g2p_en.cc  g2p_en.h  g2p_prosody.cc  g2p_prosody.h  lexicon.cc  lexicon.h  sandhi.cc  sandhi.h  sentence_break.cc  sentence_break.h  t2s.cc  t2s.h  tn.h  tokenizer.cc  tokenizer.h  traditional2simple.cc  traditional2simple.h  wav.h  word_break.cc  word_break.h
runtime/core/http/: CMakeLists.txt  http_server.cc  http_server.h
runtime/core/model/: CMakeLists.txt  onnx_model.cc  onnx_model.h  onnx_tts_model.cc  onnx_tts_model.h  tts.cc  tts.h  tts_model.cc  tts_model.h  vits_model.cc  vits_model.h
runtime/core/test/: CMakeLists.txt  sandhi_test.cc  sentence_break_test.cc  word_break_test.cc
runtime/core/utils/: CMakeLists.txt  fst.cc  fst.h  log.h  onnx_utils.cc  onnx_utils.h  string.cc  string.h  timer.h  utils.cc  utils.h
runtime/cpu_triton_stream/: .gitignore  Dockerfile  Makefile  README.md  requirements-client.txt  requirements-web.txt
runtime/cpu_triton_stream/client/: client.py  stream_client.py  text.scp  web_ui.py
runtime/cpu_triton_stream/model_repo/decoder/: config.pbtxt
runtime/cpu_triton_stream/model_repo/encoder/: config.pbtxt
runtime/cpu_triton_stream/model_repo/stream_tts/: config.pbtxt
runtime/cpu_triton_stream/model_repo/tts/: config.pbtxt
runtime/gpu_triton/: Dockerfile  README.md
runtime/gpu_triton/client/: client.py  generate_input.py  text.scp
runtime/gpu_triton/model_repo/generator/: config.pbtxt
runtime/gpu_triton/model_repo/tts/: config.pbtxt
runtime/onnxruntime/: CMakeLists.txt  model  service
runtime/web/: README.md  app.py  requirements.txt
tools/: cleaners.py  compute_spec_length.py  gen_alignment_from_textgrid.py  gen_mfa_pinyin_lexicon.py  gen_pinyin_lexicon.py  generate_mfa_pinyin_lexicon.py  lexicon.txt  make_shard_list.py  phones.list
wetts/: __init__.py
wetts/cli/: frontend.py  hub.py  model.py  tts.py
wetts/dataset/: dataset.py  feats.py  processor.py  utils.py
wetts/frontend/: README.md  cn_tn.py  dataset.py  export_onnx.py  g2p_prosody.py  gen_g2p_prosody.py  hanzi2pinyin.py  model.py  t2s.py  test_polyphone.py  test_prosody.py  train.py  utils.py
wetts/frontend/tn/: token_parser.py
wetts/models/am/fastspeech2/: fastspeech2.py  inference.py  (+3 more)
wetts/utils/: constants.py  file_utils.py  lr_scheduler.py  mask.py  plot.py
wetts/vits/: attentions.py  commons.py  data_utils.py  export_onnx.py  inference.py  inference_onnx.py  losses.py  mel_processing.py  models.py  modules.py  stft.py  train.py  train_ms.py  transforms.py  utils.py
wetts/vits/model/: attentions.py  decoder.py  decoders.py  discriminators.py  duration_predictors.py  encoders.py  flows.py  models.py  modules.py  normalization.py
wetts/vits/utils/: commons.py  mel_processing.py  monotonic_align.py  stft.py  task.py  transforms.py
(+33 files in other folders)
